Setup scripted test + copyConfigFile test, close #15